[gd_scene load_steps=4 format=3 uid="uid://ct2poygblqrg5"]

[ext_resource type="Script" path="res://scenes/gui/menus/options_tab.gd" id="1"]
[ext_resource type="Script" path="res://scenes/gui/menus/bind_button.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://dbhema4vhnlcq" path="res://scenes/gui/input_app.tscn" id="3_a07ff"]

[node name="Options" type="TabContainer"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
script = ExtResource("1")

[node name="GamePlay" type="TabBar" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GamePlay"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="GamePlay/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Gameplay options"

[node name="SteeringInterpolation" type="HBoxContainer" parent="GamePlay/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Label" type="Label" parent="GamePlay/VBoxContainer/SteeringInterpolation"]
layout_mode = 2
text = "Use steering interpolation"

[node name="CheckButton" type="CheckButton" parent="GamePlay/VBoxContainer/SteeringInterpolation"]
layout_mode = 2

[node name="Label2" type="Label" parent="GamePlay/VBoxContainer/SteeringInterpolation"]
layout_mode = 2
text = "Speed:    "

[node name="HSlider" type="HSlider" parent="GamePlay/VBoxContainer/SteeringInterpolation"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
min_value = 1.0
max_value = 10.0
step = 0.1
value = 1.0

[node name="GamepadSteering" type="HBoxContainer" parent="GamePlay/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Label" type="Label" parent="GamePlay/VBoxContainer/GamepadSteering"]
layout_mode = 2
text = "Steering linearity:	    Linear"

[node name="HSlider" type="HSlider" parent="GamePlay/VBoxContainer/GamepadSteering"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
max_value = 1.0
step = 0.05
value = 1.0

[node name="Label2" type="Label" parent="GamePlay/VBoxContainer/GamepadSteering"]
layout_mode = 2
text = "Non linear"

[node name="Graphics" type="TabBar" parent="."]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Graphics"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Graphics/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Graphics options"

[node name="AspectRatio" type="HBoxContainer" parent="Graphics/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Label" type="Label" parent="Graphics/VBoxContainer/AspectRatio"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Aspect ratio"

[node name="OptionButton" type="OptionButton" parent="Graphics/VBoxContainer/AspectRatio"]
layout_mode = 2

[node name="Resolution" type="HBoxContainer" parent="Graphics/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Label" type="Label" parent="Graphics/VBoxContainer/Resolution"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Resolution"

[node name="OptionButton" type="OptionButton" parent="Graphics/VBoxContainer/Resolution"]
layout_mode = 2

[node name="Fullscreen" type="HBoxContainer" parent="Graphics/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Label" type="Label" parent="Graphics/VBoxContainer/Fullscreen"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Fullscreen"

[node name="CheckButton" type="CheckButton" parent="Graphics/VBoxContainer/Fullscreen"]
layout_mode = 2

[node name="VSync" type="HBoxContainer" parent="Graphics/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Label" type="Label" parent="Graphics/VBoxContainer/VSync"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "VSync"

[node name="CheckButton" type="CheckButton" parent="Graphics/VBoxContainer/VSync"]
layout_mode = 2

[node name="Shadows" type="HBoxContainer" parent="Graphics/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Label" type="Label" parent="Graphics/VBoxContainer/Shadows"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Shadows"

[node name="CheckButton" type="CheckButton" parent="Graphics/VBoxContainer/Shadows"]
layout_mode = 2

[node name="Audio" type="TabBar" parent="."]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Audio"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Audio/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Audio options"

[node name="MasterVolume" type="HBoxContainer" parent="Audio/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Label" type="Label" parent="Audio/VBoxContainer/MasterVolume"]
layout_mode = 2
text = "Master volume"

[node name="HSlider" type="HSlider" parent="Audio/VBoxContainer/MasterVolume"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_vertical = 1

[node name="Label2" type="Label" parent="Audio/VBoxContainer/MasterVolume"]
layout_mode = 2
text = "50"

[node name="Input" type="TabBar" parent="."]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Input"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Input/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Input options"

[node name="HSeparator2" type="HSeparator" parent="Input/VBoxContainer"]
layout_mode = 2

[node name="BindTitles" type="HBoxContainer" parent="Input/VBoxContainer"]
layout_mode = 2

[node name="Label9" type="Label" parent="Input/VBoxContainer/BindTitles"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Actions"

[node name="Label10" type="Label" parent="Input/VBoxContainer/BindTitles"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Primary binds"

[node name="Label12" type="Label" parent="Input/VBoxContainer/BindTitles"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Range"

[node name="Label13" type="Label" parent="Input/VBoxContainer/BindTitles"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Invert"

[node name="Label11" type="Label" parent="Input/VBoxContainer/BindTitles"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "secondary binds"

[node name="Label14" type="Label" parent="Input/VBoxContainer/BindTitles"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Range"

[node name="Label15" type="Label" parent="Input/VBoxContainer/BindTitles"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Invert"

[node name="HSeparator" type="HSeparator" parent="Input/VBoxContainer"]
layout_mode = 2

[node name="SteerLeft" type="HBoxContainer" parent="Input/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Input/VBoxContainer/SteerLeft"]
custom_minimum_size = Vector2(150, 20)
layout_mode = 2
text = "Steer left"

[node name="BindButton" type="Button" parent="Input/VBoxContainer/SteerLeft"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
toggle_mode = true
script = ExtResource("2")
action = "steer_left"

[node name="HBoxContainer" type="HBoxContainer" parent="Input/VBoxContainer/SteerLeft"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="Input/VBoxContainer/SteerLeft"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2

[node name="BindButton2" type="Button" parent="Input/VBoxContainer/SteerLeft"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
toggle_mode = true
script = ExtResource("2")
action = "steer_left_secondary"

[node name="HBoxContainer2" type="HBoxContainer" parent="Input/VBoxContainer/SteerLeft"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2

[node name="CheckBox2" type="CheckBox" parent="Input/VBoxContainer/SteerLeft"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2

[node name="SteerRight" type="HBoxContainer" parent="Input/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Input/VBoxContainer/SteerRight"]
custom_minimum_size = Vector2(150, 20)
layout_mode = 2
text = "Steer right"

[node name="BindButton" type="Button" parent="Input/VBoxContainer/SteerRight"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
toggle_mode = true
script = ExtResource("2")
action = "steer_right"

[node name="HBoxContainer" type="HBoxContainer" parent="Input/VBoxContainer/SteerRight"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="Input/VBoxContainer/SteerRight"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2

[node name="BindButton2" type="Button" parent="Input/VBoxContainer/SteerRight"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
toggle_mode = true
script = ExtResource("2")
action = "steer_right_secondary"

[node name="HBoxContainer2" type="HBoxContainer" parent="Input/VBoxContainer/SteerRight"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2

[node name="CheckBox2" type="CheckBox" parent="Input/VBoxContainer/SteerRight"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2

[node name="Throttle" type="HBoxContainer" parent="Input/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Input/VBoxContainer/Throttle"]
custom_minimum_size = Vector2(150, 20)
layout_mode = 2
text = "Throttle"

[node name="BindButton" type="Button" parent="Input/VBoxContainer/Throttle"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
toggle_mode = true
script = ExtResource("2")
action = "throttle"

[node name="OptionButton" type="OptionButton" parent="Input/VBoxContainer/Throttle"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="Input/VBoxContainer/Throttle"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2

[node name="BindButton2" type="Button" parent="Input/VBoxContainer/Throttle"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
toggle_mode = true
script = ExtResource("2")
action = "throttle_secondary"

[node name="OptionButton2" type="OptionButton" parent="Input/VBoxContainer/Throttle"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2

[node name="CheckBox2" type="CheckBox" parent="Input/VBoxContainer/Throttle"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2

[node name="Brake" type="HBoxContainer" parent="Input/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Input/VBoxContainer/Brake"]
custom_minimum_size = Vector2(150, 20)
layout_mode = 2
text = "Brake"

[node name="BindButton" type="Button" parent="Input/VBoxContainer/Brake"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
toggle_mode = true
script = ExtResource("2")
action = "brake"

[node name="OptionButton" type="OptionButton" parent="Input/VBoxContainer/Brake"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="Input/VBoxContainer/Brake"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2

[node name="BindButton2" type="Button" parent="Input/VBoxContainer/Brake"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
toggle_mode = true
script = ExtResource("2")
action = "brake_secondary"

[node name="OptionButton2" type="OptionButton" parent="Input/VBoxContainer/Brake"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2

[node name="CheckBox2" type="CheckBox" parent="Input/VBoxContainer/Brake"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2

[node name="Clutch" type="HBoxContainer" parent="Input/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Input/VBoxContainer/Clutch"]
custom_minimum_size = Vector2(150, 20)
layout_mode = 2
text = "Clutch"

[node name="BindButton" type="Button" parent="Input/VBoxContainer/Clutch"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
toggle_mode = true
script = ExtResource("2")
action = "clutch"

[node name="OptionButton" type="OptionButton" parent="Input/VBoxContainer/Clutch"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="Input/VBoxContainer/Clutch"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2

[node name="BindButton2" type="Button" parent="Input/VBoxContainer/Clutch"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
toggle_mode = true
script = ExtResource("2")
action = "clutch_secondary"

[node name="OptionButton2" type="OptionButton" parent="Input/VBoxContainer/Clutch"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2

[node name="CheckBox2" type="CheckBox" parent="Input/VBoxContainer/Clutch"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2

[node name="Handbrake" type="HBoxContainer" parent="Input/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Input/VBoxContainer/Handbrake"]
custom_minimum_size = Vector2(150, 20)
layout_mode = 2
text = "Handbrake"

[node name="BindButton" type="Button" parent="Input/VBoxContainer/Handbrake"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
toggle_mode = true
script = ExtResource("2")
action = "handbrake"

[node name="OptionButton" type="OptionButton" parent="Input/VBoxContainer/Handbrake"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="Input/VBoxContainer/Handbrake"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2

[node name="BindButton2" type="Button" parent="Input/VBoxContainer/Handbrake"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
toggle_mode = true
script = ExtResource("2")
action = "handbrake_secondary"

[node name="OptionButton2" type="OptionButton" parent="Input/VBoxContainer/Handbrake"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2

[node name="CheckBox2" type="CheckBox" parent="Input/VBoxContainer/Handbrake"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2

[node name="ShiftUp" type="HBoxContainer" parent="Input/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Input/VBoxContainer/ShiftUp"]
custom_minimum_size = Vector2(150, 20)
layout_mode = 2
text = "Shift up"

[node name="BindButton" type="Button" parent="Input/VBoxContainer/ShiftUp"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
toggle_mode = true
script = ExtResource("2")
action = "shift_up"

[node name="HBoxContainer" type="HBoxContainer" parent="Input/VBoxContainer/ShiftUp"]
custom_minimum_size = Vector2(144, 0)
layout_mode = 2

[node name="BindButton2" type="Button" parent="Input/VBoxContainer/ShiftUp"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
toggle_mode = true
script = ExtResource("2")
action = "shift_up_secondary"

[node name="ShiftDown" type="HBoxContainer" parent="Input/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Input/VBoxContainer/ShiftDown"]
custom_minimum_size = Vector2(150, 20)
layout_mode = 2
text = "Shift down"

[node name="BindButton" type="Button" parent="Input/VBoxContainer/ShiftDown"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
toggle_mode = true
script = ExtResource("2")
action = "shift_down"

[node name="HBoxContainer" type="HBoxContainer" parent="Input/VBoxContainer/ShiftDown"]
custom_minimum_size = Vector2(144, 0)
layout_mode = 2

[node name="BindButton2" type="Button" parent="Input/VBoxContainer/ShiftDown"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
toggle_mode = true
script = ExtResource("2")
action = "shift_down_secondary"

[node name="ChangeCamera" type="HBoxContainer" parent="Input/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Input/VBoxContainer/ChangeCamera"]
custom_minimum_size = Vector2(150, 20)
layout_mode = 2
text = "Change Camera"

[node name="BindButton" type="Button" parent="Input/VBoxContainer/ChangeCamera"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
toggle_mode = true
script = ExtResource("2")
action = "change_camera"

[node name="HBoxContainer" type="HBoxContainer" parent="Input/VBoxContainer/ChangeCamera"]
custom_minimum_size = Vector2(144, 0)
layout_mode = 2

[node name="BindButton2" type="Button" parent="Input/VBoxContainer/ChangeCamera"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
toggle_mode = true
script = ExtResource("2")
action = "change_camera_secondary"

[node name="ToggleLights" type="HBoxContainer" parent="Input/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Input/VBoxContainer/ToggleLights"]
custom_minimum_size = Vector2(150, 20)
layout_mode = 2
text = "Toggle Lights"

[node name="BindButton" type="Button" parent="Input/VBoxContainer/ToggleLights"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
toggle_mode = true
script = ExtResource("2")
action = "toggle_lights"

[node name="HBoxContainer" type="HBoxContainer" parent="Input/VBoxContainer/ToggleLights"]
custom_minimum_size = Vector2(144, 0)
layout_mode = 2

[node name="BindButton2" type="Button" parent="Input/VBoxContainer/ToggleLights"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
toggle_mode = true
script = ExtResource("2")
action = "toggle_lights_secondary"

[node name="InputApp" parent="Input" instance=ExtResource("3_a07ff")]
layout_mode = 1

[node name="FFB" type="TabBar" parent="."]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="FFB"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Title" type="HBoxContainer" parent="FFB/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="FFB/VBoxContainer/Title"]
layout_mode = 2
text = "Force Feedback Options"

[node name="Options" type="HBoxContainer" parent="FFB/VBoxContainer"]
layout_mode = 2

[node name="Actions" type="VBoxContainer" parent="FFB/VBoxContainer/Options"]
layout_mode = 2

[node name="FFBEnabled" type="Label" parent="FFB/VBoxContainer/Options/Actions"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "Enabled"

[node name="FFBInverted" type="Label" parent="FFB/VBoxContainer/Options/Actions"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "Inverted"

[node name="FFBGain" type="Label" parent="FFB/VBoxContainer/Options/Actions"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "Gain"

[node name="FFBMinForce" type="Label" parent="FFB/VBoxContainer/Options/Actions"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "Min force"

[node name="FFBFrontForce" type="Label" parent="FFB/VBoxContainer/Options/Actions"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "Front force"

[node name="FFBRearForce" type="Label" parent="FFB/VBoxContainer/Options/Actions"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "Rear force"

[node name="Values" type="VBoxContainer" parent="FFB/VBoxContainer/Options"]
layout_mode = 2

[node name="FFBEnabled" type="CheckBox" parent="FFB/VBoxContainer/Options/Values"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="FFBInverted" type="CheckBox" parent="FFB/VBoxContainer/Options/Values"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="FFBGain" type="SpinBox" parent="FFB/VBoxContainer/Options/Values"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
suffix = "%"

[node name="FFBMinForce" type="SpinBox" parent="FFB/VBoxContainer/Options/Values"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
suffix = "%"

[node name="FFBFrontForce" type="SpinBox" parent="FFB/VBoxContainer/Options/Values"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
min_value = -150.0
max_value = 150.0
value = 100.0
suffix = "%"

[node name="FFBRearForce" type="SpinBox" parent="FFB/VBoxContainer/Options/Values"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
min_value = -150.0
max_value = 150.0
suffix = "%"

[connection signal="toggled" from="GamePlay/VBoxContainer/SteeringInterpolation/CheckButton" to="." method="_on_steering_interpolation_toggled"]
[connection signal="value_changed" from="GamePlay/VBoxContainer/SteeringInterpolation/HSlider" to="." method="_on_steer_speed_changed"]
[connection signal="value_changed" from="GamePlay/VBoxContainer/GamepadSteering/HSlider" to="." method="_on_steering_linearity_changed"]
[connection signal="item_selected" from="Graphics/VBoxContainer/AspectRatio/OptionButton" to="." method="_on_aspect_ratio_selected"]
[connection signal="item_selected" from="Graphics/VBoxContainer/Resolution/OptionButton" to="." method="_on_resolution_selected"]
[connection signal="toggled" from="Graphics/VBoxContainer/Fullscreen/CheckButton" to="." method="_on_fullscreen_toggled"]
[connection signal="toggled" from="Graphics/VBoxContainer/VSync/CheckButton" to="." method="_on_vsync_toggled"]
[connection signal="toggled" from="Graphics/VBoxContainer/Shadows/CheckButton" to="." method="_on_shadows_toggled"]
[connection signal="value_changed" from="Audio/VBoxContainer/MasterVolume/HSlider" to="." method="_on_master_audio_changed"]
[connection signal="toggled" from="Input/VBoxContainer/SteerLeft/BindButton" to="Input/VBoxContainer/SteerLeft/BindButton" method="_toggled"]
[connection signal="toggled" from="Input/VBoxContainer/SteerLeft/BindButton2" to="Input/VBoxContainer/SteerLeft/BindButton2" method="_toggled"]
[connection signal="toggled" from="Input/VBoxContainer/SteerRight/BindButton" to="Input/VBoxContainer/SteerRight/BindButton" method="_toggled"]
[connection signal="toggled" from="Input/VBoxContainer/SteerRight/BindButton2" to="Input/VBoxContainer/SteerRight/BindButton2" method="_toggled"]
[connection signal="toggled" from="Input/VBoxContainer/Throttle/BindButton" to="Input/VBoxContainer/Throttle/BindButton" method="_toggled"]
[connection signal="item_selected" from="Input/VBoxContainer/Throttle/OptionButton" to="." method="_on_throttle_range_selected"]
[connection signal="toggled" from="Input/VBoxContainer/Throttle/CheckBox" to="." method="_on_throttle_inverted_toggled"]
[connection signal="toggled" from="Input/VBoxContainer/Throttle/BindButton2" to="Input/VBoxContainer/Throttle/BindButton2" method="_toggled"]
[connection signal="item_selected" from="Input/VBoxContainer/Throttle/OptionButton2" to="." method="_on_throttle_sec_range_selected"]
[connection signal="toggled" from="Input/VBoxContainer/Throttle/CheckBox2" to="." method="_on_throttle_sec_inverted_toggled"]
[connection signal="toggled" from="Input/VBoxContainer/Brake/BindButton" to="Input/VBoxContainer/Brake/BindButton" method="_toggled"]
[connection signal="item_selected" from="Input/VBoxContainer/Brake/OptionButton" to="." method="_on_brake_range_selected"]
[connection signal="toggled" from="Input/VBoxContainer/Brake/CheckBox" to="." method="_on_brake_inverted_toggled"]
[connection signal="toggled" from="Input/VBoxContainer/Brake/BindButton2" to="Input/VBoxContainer/Brake/BindButton2" method="_toggled"]
[connection signal="item_selected" from="Input/VBoxContainer/Brake/OptionButton2" to="." method="_on_brake_sec_range_selected"]
[connection signal="toggled" from="Input/VBoxContainer/Brake/CheckBox2" to="." method="_on_brake_sec_inverted_toggled"]
[connection signal="toggled" from="Input/VBoxContainer/Clutch/BindButton" to="Input/VBoxContainer/Clutch/BindButton" method="_toggled"]
[connection signal="item_selected" from="Input/VBoxContainer/Clutch/OptionButton" to="." method="_on_clutch_range_selected"]
[connection signal="toggled" from="Input/VBoxContainer/Clutch/CheckBox" to="." method="_on_clutch_inverted_toggled"]
[connection signal="toggled" from="Input/VBoxContainer/Clutch/BindButton2" to="Input/VBoxContainer/Clutch/BindButton2" method="_toggled"]
[connection signal="item_selected" from="Input/VBoxContainer/Clutch/OptionButton2" to="." method="_on_clutch_sec_range_selected"]
[connection signal="toggled" from="Input/VBoxContainer/Clutch/CheckBox2" to="." method="_on_clutch_sec_inverted_toggled"]
[connection signal="toggled" from="Input/VBoxContainer/Handbrake/BindButton" to="Input/VBoxContainer/Handbrake/BindButton" method="_toggled"]
[connection signal="item_selected" from="Input/VBoxContainer/Handbrake/OptionButton" to="." method="_on_handbrake_range_selected"]
[connection signal="toggled" from="Input/VBoxContainer/Handbrake/CheckBox" to="." method="_on_handbrake_inverted_toggled"]
[connection signal="toggled" from="Input/VBoxContainer/Handbrake/BindButton2" to="Input/VBoxContainer/Handbrake/BindButton2" method="_toggled"]
[connection signal="item_selected" from="Input/VBoxContainer/Handbrake/OptionButton2" to="." method="_on_handbrake_sec_range_selected"]
[connection signal="toggled" from="Input/VBoxContainer/Handbrake/CheckBox2" to="." method="_on_handbrake_sec_inverted_toggled"]
[connection signal="toggled" from="Input/VBoxContainer/ShiftUp/BindButton" to="Input/VBoxContainer/ShiftUp/BindButton" method="_toggled"]
[connection signal="toggled" from="Input/VBoxContainer/ShiftUp/BindButton2" to="Input/VBoxContainer/ShiftUp/BindButton2" method="_toggled"]
[connection signal="toggled" from="Input/VBoxContainer/ShiftDown/BindButton" to="Input/VBoxContainer/ShiftDown/BindButton" method="_toggled"]
[connection signal="toggled" from="Input/VBoxContainer/ShiftDown/BindButton2" to="Input/VBoxContainer/ShiftDown/BindButton2" method="_toggled"]
[connection signal="toggled" from="Input/VBoxContainer/ChangeCamera/BindButton" to="Input/VBoxContainer/ChangeCamera/BindButton" method="_toggled"]
[connection signal="toggled" from="Input/VBoxContainer/ChangeCamera/BindButton2" to="Input/VBoxContainer/ChangeCamera/BindButton2" method="_toggled"]
[connection signal="toggled" from="Input/VBoxContainer/ToggleLights/BindButton" to="Input/VBoxContainer/ToggleLights/BindButton" method="_toggled"]
[connection signal="toggled" from="Input/VBoxContainer/ToggleLights/BindButton2" to="Input/VBoxContainer/ToggleLights/BindButton2" method="_toggled"]
[connection signal="toggled" from="FFB/VBoxContainer/Options/Values/FFBEnabled" to="." method="_on_ffb_enabled_toggled"]
[connection signal="toggled" from="FFB/VBoxContainer/Options/Values/FFBInverted" to="." method="_on_ffb_inverted_toggled"]
[connection signal="value_changed" from="FFB/VBoxContainer/Options/Values/FFBGain" to="." method="_on_ffb_gain_value_changed"]
[connection signal="value_changed" from="FFB/VBoxContainer/Options/Values/FFBMinForce" to="." method="_on_ffb_min_force_value_changed"]
[connection signal="value_changed" from="FFB/VBoxContainer/Options/Values/FFBFrontForce" to="." method="_on_ffb_front_force_value_changed"]
[connection signal="value_changed" from="FFB/VBoxContainer/Options/Values/FFBRearForce" to="." method="_on_ffb_rear_force_value_changed"]
